examples/test/testpolicy15592.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15592
  namespace: namespace306
spec:
  podSelector:
    matchLabels:
      key24: value43
      key36: value18
      key9: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value17
          key36: value12
          key23: value21
